--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   such as all my calibre plugins and web browser extensions.
 domain: git.kiwidude.com
 url: https://git.kiwidude.com # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: docs # the subpath of your site, e.g. /blog
+baseurl: /docs # the subpath of your site, e.g. /blog
 github_username:  kiwidude68
 
 # Build settings
